mdapi_output/objects/Image_Classification_Result__c.object
<CustomObject>
    <label>Image Classification Result</label>
    <nameField>
        <displayFormat>ICR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Classification Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Image_Classification__c</fullName>
        <label>Image Classification</label>
        <referenceTo>Image_Classification__c</referenceTo>
        <relationshipLabel>Image Classification Results</relationshipLabel>
        <relationshipName>Image_Classification_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>